[package]
name = "hello_rust"
version = "0.1.0"
authors = ["liuyuan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
tokio = { version = "0.2", features = ["full"] }
hyper = "*"
toolshed = "*"
rayon = "*"
typed-arena = "1.6.1"
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
